Turn an assertion into a warning so we don't have to change behaviour in debug builds to avoid getting too many assertions b=326033 r=smaug sr=bz bl=dbaron